--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
 	"type"                 : "library",
 	"license"              : "MIT",
 	"require"              : {
-		"php" : ">=8.0"
+		"php"                 : ">=8.0",
+		"coco-project/logger" : "^1.0"
 	},
 	"autoload"             : {
 		"psr-4" : {
